2006-05-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* gdbinit.in:
	* dbxrc.in:
	Moved from src/.  Update FSF address.  Improve comments.

	* gdbinit.in: Use XCOMM for "don't edit" comment and copyright.

2006-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.27 "fiddleheads" is released.

2006-03-31  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.26 "endive" is released.

2006-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.25 "eggplant" is released.

2005-12-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.24 "dandelion" is released.

2005-12-10  Malcolm Purvis  <malcolmp@xemacs.org>

	* photos/purvis.png, photos/purvism.png: Updated.

2005-11-18  Aidan Kehoe  <kehoea@parhasard.net>

	* HELLO: Add Irish, Tajik. Don't give the local name for the
	latter language, because we don't support CYRILLIC SMALL LETTER
	CHE WITH DESCENDER nor CYRILLIC SMALL LETTER I WITH MACRON by
	default. 

2005-11-16  Malcolm Purvis  <malcolmp@xemacs.org>

	* .cvsignore: New

2005-10-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.23 "daikon" is released.

2005-09-17  Malcolm Purvis  <malcolmp@xemacs.org>

	* configure-2.13: Remove.  autoconf 2.59 support is stable.

2005-09-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.22 "cucumber" is released.

2005-07-17  Aidan Kehoe  <kehoea@parhasard.net>

	* NEWS: Add information on the last argument to event-to-character
	being ignored. 

2005-05-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.21 "corn" is released.

2005-05-05  Aidan Kehoe  <kehoea@parhasard.net>

	* NEWS: reseource -> resources (spelling fix.)

2005-03-24  Aidan Kehoe  <kehoea@parhasard.net>

	* NEWS: Mention the move to XEmacs as the application class. 
	* sample.Xresources: Emacs as app class -> XEmacs as app class

2005-03-23  Adrian Aichner  <adrian@xemacs.org>

	* TUTORIAL: Typo fixes from Jon Ericson.

2005-03-11  Stephen J. Turnbull  <stephen@xemacs.org>
