@@ -1,4 +1,5 @@
-.\" Copyright (c) 1992, 2001 Free Software Foundation
+.\" Copyright (C) 1992, 2001, 2002, 2003, 2004,
+.\"   2005, 2006 Free Software Foundation, Inc.
 .\" See section COPYING for conditions for redistribution
 .TH etags 1 "23nov2001" "GNU Tools" "GNU Tools"
 .de BP
@@ -12,7 +13,7 @@ etags, ctags \- generate tag file for Emacs, vi
 .SH SYNOPSIS
 .hy 0
 .na
-\fBetags\fP [\|\-aCDGImRVh\|] [\|\-i \fIfile\fP\|] [\|\-l \fIlanguage\fP\|]
+\fBetags\fP [\|\-aCDGIRVh\|] [\|\-i \fIfile\fP\|] [\|\-l \fIlanguage\fP\|]
 .if n .br
 [\|\-o \fItagfile\fP\|] [\|\-r \fIregexp\fP\|]
 [\|\-\-parse\-stdin=\fIfile\fP\|]
@@ -25,7 +26,7 @@ etags, ctags \- generate tag file for Emacs, vi
 [\|\-\-help\|] [\|\-\-version\|]
 \fIfile\fP .\|.\|.
 
-\fBctags\fP [\|\-aCdgImRVh\|] [\|\-BtTuvwx\|] [\|\-l \fIlanguage\fP\|]
+\fBctags\fP [\|\-aCdgIRVh\|] [\|\-BtTuvwx\|] [\|\-l \fIlanguage\fP\|]
 .if n .br
 [\|\-o \fItagfile\fP\|] [\|\-r \fIregexp\fP\|]
 [\|\-\-parse\-stdin=\fIfile\fP\|]
@@ -92,28 +93,31 @@ and create tags for extern variables unless \-\-no\-globals is used.
 .TP
 .B \-d, \-\-defines
 Create tag entries for C preprocessor constant definitions
-and enum constants, too.  This is the
-default behavior for \fBetags\fP.
+and enum constants, too.  Since this is the default behavior of
+\fBetags\fP, only \fBctags\fP accepts this option.
 .TP
 .B \-D, \-\-no\-defines
 Do not create tag entries for C preprocessor constant definitions
 and enum constants.
 This may make the tags file much smaller if many header files are tagged.
-This is the default behavior for \fBctags\fP.
+Since this is the default behavior of \fBctags\fP, only \fBetags\fP
+accepts this option.
 .TP
-.B \-g, \-\-globals
+.B \-\-globals
 Create tag entries for global variables in C, C++, Objective C, Java,
 and Perl.
-This is the default behavior for \fBetags\fP.
+Since this is the default behavior of \fBetags\fP, only \fBctags\fP
+accepts this option.
 .TP
-.B \-G, \-\-no\-globals
+.B \-\-no\-globals
 Do not tag global variables.  Typically this reduces the file size by
-one fourth.  This is the default behavior for \fBctags\fP.
+one fourth.  Since this is the default behavior of \fBctags\fP, only
+\fBetags\fP accepts this option.
 .TP
 \fB\-i\fP \fIfile\fP, \fB\-\-include=\fIfile\fP
 Include a note in the tag file indicating that, when searching for a
 tag, one should also consult the tags file \fIfile\fP after checking the
-current file.  This options is only accepted by \fBetags\fP.
+current file.  Only \fBetags\fP accepts this option.
 .TP
 .B \-I, \-\-ignore\-indentation
 Don't rely on indentation as much as we normally do.  Currently, this
@@ -129,11 +133,11 @@ detection of language based on the file name.  The `none'
 language may be used to disable language parsing altogether; only
 regexp matching is done in this case (see the \fB\-\-regex\fP option).
 .TP
-.B \-m, \-\-members
+.B \-\-members
 Create tag entries for variables that are members of structure-like
 constructs in C++, Objective C, Java.
 .TP
-.B \-M, \-\-no\-members
+.B \-\-no\-members
 Do not tag member variables.  This is the default behavior.
 .TP
 .B \-\-packages\-only
@@ -288,7 +292,7 @@ Stallman.
 Copyright
 .if t \(co
 .if n (c)
-1999, 2001 Free Software Foundation, Inc.
+1999, 2001, 2002, 2003, 2004, 2005, 2006 Free Software Foundation, Inc.
 .PP
 Permission is granted to make and distribute verbatim copies of this
 document provided the copyright notice and this permission notice are
